color bar issue fixed

--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -10958,9 +10958,8 @@ body  header {
   overflow: auto;
   transform: translateY(-100%);
   transition-property: transform;
-  transition-duration: .4s;
-  padding: 50px 85px; }
-  /* line 228, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  transition-duration: .4s; }
+  /* line 227, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
   .site-menu ul.navbar-nav li a {
     color: black;
     font-size: 25px;
@@ -10968,44 +10967,50 @@ body  header {
     padding: 0;
     padding-bottom: 10px;
     margin-bottom: 10px; }
-    /* line 235, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+    /* line 234, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
     .site-menu ul.navbar-nav li a.active {
       color: #f16624; }
-  /* line 241, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  /* line 239, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  .site-menu ul.navbar-nav li ul li {
+    list-style-type: none; }
+  /* line 245, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
   .site-menu.visible {
     transform: translateY(0); }
-  @media (max-width: 768px) {
-    /* line 212, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
-    .site-menu {
-      padding: 44px 25px; } }
-  /* line 248, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  /* line 250, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
   .site-menu .rectangle-black {
     width: 84px;
     height: 100%;
     background-color: #090b0c;
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 84px; }
     @media (max-width: 767px) {
-      /* line 248, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 250, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .site-menu .rectangle-black {
         right: 25px;
         width: 25px; } }
-  /* line 261, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  /* line 263, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
   .site-menu .rectangle-orange {
     width: 84px;
     height: 100%;
     background-color: #f16624;
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     z-index: 11; }
     @media (max-width: 767px) {
-      /* line 261, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 263, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .site-menu .rectangle-orange {
         width: 25px; } }
+  /* line 276, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  .site-menu .menu-items {
+    padding: 50px 85px; }
+    @media (max-width: 768px) {
+      /* line 276, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      .site-menu .menu-items {
+        padding: 44px 25px; } }
 
-/* line 276, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+/* line 284, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
 .menu-close-btn {
   color: #fff;
   position: absolute;
@@ -11014,20 +11019,20 @@ body  header {
   padding: 0;
   margin-right: -9px;
   z-index: 1; }
-  /* line 284, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  /* line 292, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
   .menu-close-btn img {
     width: 35px; }
     @media (max-width: 767px) {
-      /* line 284, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 292, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .menu-close-btn img {
         width: 18px; } }
   @media (max-width: 768px) {
-    /* line 276, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+    /* line 284, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
     .menu-close-btn {
       top: 40px;
       right: 38px; } }
 
-/* line 304, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+/* line 312, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
 .header-bg, .header-bg-post {
   background: url("../images/slider-img.png") no-repeat;
   padding: 25px 65px;
@@ -11036,18 +11041,18 @@ body  header {
   background-position: bottom;
   margin-bottom: 50px;
   margin-top: 0px; }
-  /* line 312, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+  /* line 320, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
   .header-bg .breadcrumbs-wrapper, .header-bg-post .breadcrumbs-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 10px 0 24px; }
-    /* line 317, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+    /* line 325, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
     .header-bg .breadcrumbs-wrapper .title, .header-bg-post .breadcrumbs-wrapper .title {
       margin-top: 0.5rem;
       color: white;
       position: relative; }
-      /* line 321, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 329, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .header-bg .breadcrumbs-wrapper .title:before, .header-bg-post .breadcrumbs-wrapper .title:before {
         content: "";
         position: absolute;
@@ -11058,7 +11063,7 @@ body  header {
         top: -8px;
         left: -15px;
         border-width: 2px 0 0 2px; }
-      /* line 332, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 340, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .header-bg .breadcrumbs-wrapper .title:after, .header-bg-post .breadcrumbs-wrapper .title:after {
         content: "";
         position: absolute;
@@ -11070,39 +11075,39 @@ body  header {
         right: -15px;
         border-width: 0 2px 2px 0; }
         @media (max-width: 425px) {
-          /* line 332, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+          /* line 340, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
           .header-bg .breadcrumbs-wrapper .title:after, .header-bg-post .breadcrumbs-wrapper .title:after {
             right: -25px; } }
       @media (max-width: 767px) {
-        /* line 317, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+        /* line 325, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
         .header-bg .breadcrumbs-wrapper .title, .header-bg-post .breadcrumbs-wrapper .title {
           white-space: nowrap; } }
-    /* line 350, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+    /* line 358, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
     .header-bg .breadcrumbs-wrapper .breadcrumbs-inside, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside {
       color: white; }
-      /* line 352, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 360, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul {
         padding-left: 0;
         display: flex;
         margin-top: 1rem;
         justify-content: center; }
-        /* line 357, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+        /* line 365, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
         .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul li {
           list-style-type: none; }
-          /* line 359, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+          /* line 367, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
           .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li a, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul li a {
             color: #f16624; }
-            /* line 361, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+            /* line 369, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
             .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li a span, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul li a span {
               padding: 0 0.5rem; }
-            /* line 364, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+            /* line 372, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
             .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li a:hover, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul li a:hover {
               color: white; }
-          /* line 368, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+          /* line 376, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
           .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li span, .header-bg-post .breadcrumbs-wrapper .breadcrumbs-inside ul li span {
             padding: 0 0.5rem; }
     @media (max-width: 767px) {
-      /* line 312, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+      /* line 320, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .header-bg .breadcrumbs-wrapper, .header-bg-post .breadcrumbs-wrapper {
         display: block;
         text-align: center; } }
