--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -21,6 +21,11 @@ hr.line-separator{
         font-weight: 700;
     }
 }
+.section-title{
+    color: $orange-3;
+    font-weight: 300;
+    text-align: center;
+}
 .single-post{
     .content{
         p{
@@ -767,6 +772,11 @@ hr.line-separator{
         }
     }
     .contact-form{
+        width: 100%;
+        .sub-title{
+            color: $gray-600;
+            text-align: center;
+        }
         .panel-body{
             box-shadow: 0 2px 20px 0 rgba(235, 235, 235, 0.5);
             background-color: white;
@@ -816,6 +826,9 @@ hr.line-separator{
             top: -25px;
             left: -25px;
             z-index: -1
+        }
+        @media (max-width: 767px){
+            margin: 0 40px;
         }
     }
 }
@@ -929,69 +942,265 @@ hr.line-separator{
 }
 
 .services-page{
+    position: relative;
+    background-image: url(../images/bgimg1.png);
+    background-position: bottom 30% right -90px;
+    background-size: auto;
+    background-repeat: no-repeat;
+    .overlay{
+        position: absolute; 
+        width: 100%;
+        height: 100%;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(255, 255, 255, 0.82);
+        z-index: 0;
+        cursor: pointer;
+    }
     .detailed-page{
-        padding: 30px;
         box-shadow: 0 2px 40px 0 rgba(235, 235, 235, 0.5);
-        background-color: #ffffff;
+        background-color: white;
         position: relative;
-        .left{
-            h2{
-                position: relative;
-                &:after{
-                    content:'';
-                    position: absolute;
-                    width: 24%;
-                    left: 0;
-                    bottom: 0;
-                    border-bottom: solid 5px $orange-3;
-                    padding-bottom: 40px;
-                }
-            }
-        }
-        .right{
-            h2{
-                position: relative;
-                &:after{
-                    content:'';
-                    position: absolute;
-                    width: 24%;
-                    right: 0;
-                    bottom: 0;
-                    border-bottom: solid 5px #f16624;
-                    padding-bottom: 40px;
-                }
-            }
-        }
         .services-block{
             position: relative;
+            width: 100%;
             .number-overlay{
                 color: black;
-                font-size: 100px;
+                font-size: 150px;
                 position: absolute;
                 opacity: 0.07;
-                top: -60px;
+                top: -25px;
                 z-index: 0;
+                @media (max-width: 767px){
+                    font-size: 120px;
+                    top: 0px;
+                }
             }
             &.left{
+                padding-left: 160px;
+                padding-bottom: 80px;
+                padding-top: 80px;
                 .number-overlay{
-                    left: 0;
+                    left: 85px;
+                    @media (max-width: 767px){
+                        left: 20px;
+                    }
+                }
+                .title{
+                    position: relative;
+                     h2{
+                        position: relative;
+                        &:after{
+                            content:'';
+                            position: absolute;
+                            width: 24%;
+                            left: 0;
+                            bottom: 0;
+                            border-bottom: solid 5px $orange-3;
+                            padding-bottom: 40px;
+                        }
+                        @media (max-width: 767px){
+                            font-size: 25px;
+                        }
+                    }
+                    &:after{
+                        content: '';
+                        position: absolute;
+                        top: -50px;
+                        left: 169px;
+                        background-image: url(../images/dashedlines.png);
+                        background-size: 160px;
+                        background-repeat: no-repeat;
+                        height: 100%;
+                        width: 200px;
+                        opacity: 0.08;
+                        @media (max-width: 767px){
+                            width: 100px;
+                            left: 155px;
+                        }
+                    }
+                }
+                @media (max-width: 767px){
+                    padding-right: 30px;
+                    padding-left: 30px
                 }
             }
             &.right{
+                padding-right: 160px;
+                padding-bottom: 80px;
+                padding-top: 80px;
                 .number-overlay{
-                    right: 0;
+                    right: 60px;
+                    @media (max-width: 767px){
+                        right: 20px;
+                    }
+                }
+                .title{
+                    position: relative;
+                    h2{
+                        position: relative;
+                        &:after{
+                            content:'';
+                            position: absolute;
+                            width: 24%;
+                            right: 0;
+                            bottom: 0;
+                            border-bottom: solid 5px $orange-3;
+                            padding-bottom: 40px;
+                        }
+                        @media (max-width: 767px){
+                            font-size: 25px;
+                        }
+                    }
+                    &:after{
+                        content: '';
+                        position: absolute;
+                        top: -50px;
+                        right: 250px;
+                        background-image: url(../images/dashedlines.png);
+                        background-size: 160px;
+                        background-repeat: no-repeat;
+                        height: 100%;
+                        width: 200px;
+                        opacity: 0.08;
+                        @media (max-width: 767px){
+                            width: 100px;
+                            right: 120px;
+                        }
+                    }
+                }
+                @media (max-width: 767px){
+                    padding-right: 30px;
+                    padding-left: 30px
+                }
+                .s-content{
+                    @media (max-width: 767px){
+                        flex-direction: column-reverse;
+                    }
                 }
             }
+
             &.services{
                 &-01{
                     .outer-box-shares{
-                        box-shadow: 0 2px 20px 0 rgba(235, 235, 235, 0.5);
-                        background-color: white;
-                        width: 400px;
-                        height: 400px;
+                        width: auto;
+                        height: auto;
+                        right: 30px;
+                        table{
+                            box-shadow: 0 2px 20px 0 rgba(235, 235, 235, 0.5);
+                            background-color: white;
+                            border-radius: 15px 0 0 15px;
+                            border-collapse: separate;
+                            border-spacing: 0 1em;
+                            padding: 0 0 0 20px;
+                            float: right;
+                            tbody{
+                                tr{
+                                    td{
+                                        background-color: #fafafa; 
+                                        padding: 15px;
+                                    }
+                                    td {
+                                        &:first-child {
+                                            border-top-left-radius: 15px;
+                                            border-bottom-left-radius: 15px;
+                                        }
+                                    }
+                                }
+                            }
+                            &:before{
+                                content: "";
+                                position: absolute;
+                                width: 200px;
+                                height: 200px;
+                                border: 2px dashed $orange-3;
+                                z-index: 0;
+                                top: -22px;
+                                left: 30px;
+                                opacity: 0.46;
+                                border-width: 0px 0 0px 2px;
+                                @media (max-width: 991px){
+                                    width: 150px;
+                                    height: 150px;
+                                    display: none;
+                                }
+                            }
+                            &:after{
+                                content: "";
+                                position: absolute;
+                                width: 200px;
+                                height: 200px;
+                                border: 2px dashed $orange-3;
+                                z-index: 0;
+                                top: -12px;
+                                left: 40px;
+                                border-width: 0px 0px 0px 2px;
+                                @media (max-width: 991px){
+                                    width: 150px;
+                                    height: 150px;
+                                    display: none;
+                                }
+                            }
+                        }
+                    }
+                    @media (max-width: 767px){
+                        padding-right: 0;
+                    }
+                }
+                &-04{
+                    @media (max-width: 767px){
+                        padding-left: 0;
+                    }
+                }
+            }
+            .s-content{
+                img{    
+                    max-width: 100%;
+                    vertical-align: middle;
+                }
+                .ser_img-04{
+                    position: relative;
+                    margin-top: 30px;
+                    &:before{
+                        content: "";
+                        position: absolute;
+                        width: 200px;
+                        height: 200px;
+                        border: 2px dashed $orange-3;
+                        z-index: 0;
+                        top: -22px;
+                        right: -22px;
+                        opacity: 0.46;
+                        border-width: 2px 2px 0px 0;
+                        @media (max-width: 991px){
+                            width: 150px;
+                            height: 150px;
+                        }
+                    }
+                    &:after{
+                        content: "";
+                        position: absolute;
+                        width: 200px;
+                        height: 200px;
+                        border: 2px dashed $orange-3;
+                        z-index: 0;
+                        top: -12px;
+                        right: -12px;
+                        border-width: 2px 2px 0px 0;
+                        @media (max-width: 991px){
+                            width: 150px;
+                            height: 150px;
+                        }
                     }
                 }
             }
         }
+    }
+    @media (max-width: 767px){
+        background-position: top 30% right -90px;
+    }
+    @media (max-width: 767px){
+        background-position: top 30% right -450px;
     }
 }
