--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -50,6 +50,7 @@ body:not(.home , .page-template-front-page-home , .page-template-front-page-vers
 .hamburger-menu{
     > div {
         background-color: #000;
+        display: none;
     }
 }
 .page-template-template-press-php , .single{
