--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1266,6 +1266,9 @@ input[type="text"] , textarea{
             color: $gray-600;
             text-align: center;
             padding: 15px 0;
+            @media (max-width: 425px){
+                padding-left: 24px;
+            }
         }
         .block{
             margin-left: 90px;
