--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1344,7 +1344,8 @@ input[type="text"] , textarea{
             @media (max-width: 991px){
                 position: relative;
                 margin-top: 39px;
-                padding-right: 30px;
+                padding-right: 15px;
+                right: 0;
             }
         }
         @media (max-width: 425px){
