--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -781,6 +781,7 @@ hr.line-separator{
             box-shadow: 0 2px 20px 0 rgba(235, 235, 235, 0.5);
             background-color: white;
             padding: 1.5rem;
+            margin: 0 15px;
             input[type="text"] , textarea{
                 border-bottom: solid 1px $gray-500 !important;
                 box-shadow: none;
@@ -1261,6 +1262,10 @@ input[type="text"] , textarea{
             @media (max-width: 991px){
                 padding: 15px 0;
             }
+            @media (max-width: 425px){
+                padding: 0 30px;
+                font-size: 24px;
+            }
         }
         .sub-text{
             color: $gray-600;
@@ -1344,7 +1349,8 @@ input[type="text"] , textarea{
             @media (max-width: 991px){
                 position: relative;
                 margin-top: 39px;
-                padding-right: 30px;
+                padding-right: 15px;
+                right: 0;
             }
         }
         @media (max-width: 425px){
