--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1329,6 +1329,12 @@ input[type="text"] , textarea{
                     width: 150px;
                     height: 150px;
                 }
+                @media (max-width: 425px){
+                    width: 150px;
+                    height: 150px;
+                    top: -7px;
+                    left: 30px;
+                }
             }
             &:after{
                 content: "";
@@ -1345,12 +1351,19 @@ input[type="text"] , textarea{
                     width: 150px;
                     height: 150px;
                 }
+                @media (max-width: 425px){
+                    top: -18px;
+                    left: 20px;
+                }
             }
             @media (max-width: 991px){
                 position: relative;
                 margin-top: 39px;
                 padding-right: 15px;
                 right: 0;
+            }
+            @media (max-width: 425px){
+                padding-left: 40px;
             }
         }
         @media (max-width: 425px){
