--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1358,3 +1358,505 @@ input[type="text"] , textarea{
         }
     }
 }
+
+
+/* Section Services */
+.services {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+  
+  > * {
+    flex-grow: 1;
+  }
+}
+
+.circle--rotate {
+  border-radius: 50%;
+  border: 1px #000000 solid;
+  width: 43%;
+  height: 43%;
+  margin: 0 auto 0;
+  position: relative;
+  transform: rotate(0deg);
+  z-index: 0;
+  padding: 0;
+
+  > li {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 50%;
+    z-index: 10;
+    visibility: hidden;
+
+    .icon {
+      visibility: visible;
+      cursor: pointer;
+      text-align: center;
+      overflow: hidden;
+      font-size: 20px;
+      color: #ffffff;
+      border-radius: 50%;
+      width: 100%;
+      margin: -8% auto;
+      transition: all 500ms ease;
+
+      &:hover {
+      }
+    }
+
+    i {
+      color: #ffffff;
+      font-size: 24px;
+      margin: auto;
+      cursor: pointer;
+      width: 100%;
+      height: 100%;
+      display: table;
+
+      &::before {
+        display: table-cell;
+        vertical-align: middle;
+      }
+    }
+
+    img {
+        margin: auto;
+        transform: rotate(235deg);
+        width: 100px;
+        height: 100px;
+        @media (max-width: 991px){
+            width: 75px;
+            height: 75px;
+        }
+        @media (max-width: 768px){
+            width: 45px;
+            height: 45px;
+        }
+    }
+  }
+  @media (max-width: 475px){
+    height: 50vh !important;
+    width: 37%;
+    border: 0;
+  }
+}
+
+.circle--slider {
+  position: relative;
+
+  .rotate--circle {
+    margin: 0 auto;
+  }
+
+  .circle--rotate > li {
+
+    div {
+      position: relative;
+      overflow: visible;
+
+      span {
+        transform: rotate(0deg);
+        transition: all 2s;
+        opacity: 0;
+      }
+    }
+
+    &.active div {
+    img{
+        width: 200px;
+        height: 200px;
+        transform: rotate(0);
+        @media (max-width: 1200px){
+            width: 150px;
+            height: 150px;
+        }
+        @media (max-width: 768px){
+            width: 100px;
+            height: 100px;
+        }
+        @media (max-width: 599px){
+            width: 75px;
+            height: 75px;
+        }
+      }
+      span {
+        width: 100%;
+        height: 100%;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: rotate(-45deg);
+        z-index: -1;
+        opacity: 1;
+
+        &:before {
+          position: absolute;
+          height: 1px;
+          top: -50%;
+          right: 140%;
+          bottom: 0;
+          margin: auto;
+          content: "";
+          width: 30%;
+          height: 30%;
+          filter: blur(3px);
+          opacity: .7;
+          border: 6px solid #F48E2A;
+          z-index: -1;
+        }
+
+        &:after {
+          position: absolute;
+          height: 1px;
+          top: 100%;
+          left: 130%;
+          bottom: 0;
+          margin: auto;
+          content: "";
+          width: 40%;
+          height: 40%;
+          border-radius: 50%;
+          opacity: .7;
+          border: 8px solid #FE9290;
+          z-index: 5;
+        }
+      }
+    }
+  }
+
+  .count2 li:nth-child(2) {
+    transform: rotate(180deg);
+  }
+
+  .count3 li {
+    &:nth-child(2) {
+      transform: rotate(120deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(240deg);
+    }
+  }
+
+  .count4 li {
+    &:nth-child(2) {
+      transform: rotate(90deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(180deg);
+    }
+    &:nth-child(4) {
+      transform: rotate(270deg);
+    }
+  }
+
+  .count5 li {
+    &:nth-child(2) {
+      transform: rotate(72deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(144deg);
+    }
+    &:nth-child(4) {
+      transform: rotate(216deg);
+    }
+    &:nth-child(5) {
+      transform: rotate(-72deg);
+    }
+  }
+
+  .count6 li {
+    &:nth-child(2) {
+      transform: rotate(60deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(120deg);
+    }
+    &:nth-child(4) {
+      transform: rotate(180deg);
+    }
+    &:nth-child(5) {
+      transform: rotate(240deg);
+    }
+    &:nth-child(6) {
+      transform: rotate(-60deg);
+    }
+  }
+
+  .count7 li {
+    &:nth-child(2) {
+      transform: rotate(51.5deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(103deg);
+    }
+    &:nth-child(4) {
+      transform: rotate(154.5deg);
+    }
+    &:nth-child(5) {
+      transform: rotate(206deg);
+    }
+    &:nth-child(6) {
+      transform: rotate(-103deg);
+    }
+    &:nth-child(7) {
+      transform: rotate(-51.5deg);
+    }
+  }
+
+  .count8 li {
+    &:nth-child(2) {
+      transform: rotate(45deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(90deg);
+    }
+    &:nth-child(4) {
+      transform: rotate(135deg);
+    }
+    &:nth-child(5) {
+      transform: rotate(180deg);
+    }
+    &:nth-child(6) {
+      transform: rotate(-135deg);
+    }
+    &:nth-child(7) {
+      transform: rotate(-90deg);
+    }
+    &:nth-child(8) {
+      transform: rotate(-45deg);
+    }
+  }
+
+  .count9 li {
+    &:nth-child(2) {
+      transform: rotate(40deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(80deg);
+    }
+    &:nth-child(4) {
+      transform: rotate(120deg);
+    }
+    &:nth-child(5) {
+      transform: rotate(160deg);
+    }
+    &:nth-child(6) {
+      transform: rotate(-160deg);
+    }
+    &:nth-child(7) {
+      transform: rotate(-120deg);
+    }
+    &:nth-child(8) {
+      transform: rotate(-80deg);
+    }
+    &:nth-child(9) {
+      transform: rotate(-40deg);
+    }
+  }
+
+  .count10 li {
+    &:nth-child(2) {
+      transform: rotate(36deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(72deg);
+    }
+    &:nth-child(4) {
+      transform: rotate(108deg);
+    }
+    &:nth-child(5) {
+      transform: rotate(144deg);
+    }
+    &:nth-child(6) {
+      transform: rotate(-180deg);
+    }
+    &:nth-child(7) {
+      transform: rotate(-144deg);
+    }
+    &:nth-child(8) {
+      transform: rotate(-108deg);
+    }
+    &:nth-child(9) {
+      transform: rotate(-72deg);
+    }
+    &:nth-child(10) {
+      transform: rotate(-36deg);
+    }
+  }
+
+    .animate-wrapper {
+        width: 25%;
+        height: 25%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        border-radius: 50%;
+    }
+
+    .animate-title {          
+        color: black;
+        .name{
+            @media(max-width: 575px){
+                font-size: 12px;
+            }
+        }
+        .designation{
+            @media (max-width: 575px){
+                font-size: 9px;
+            }
+        }
+        h4{
+            position: relative;
+            &:before{
+                content: '\f10d' ;
+                font-family: 'FontAwesome';
+                font-size: 40px;
+                opacity: 0.27;
+                color: #f16624;
+                position: absolute;
+                top: -50px;
+                left: 0px;
+                @media (max-width: 1200px){
+                    top: -30px;
+                   font-size: 22px;
+                }
+                @media (max-width: 767px){
+                    top: -10px;
+                    font-size: 10px;
+                }
+            }
+            &:after{
+                content: '\f10e' ;
+                font-family: 'FontAwesome';
+                font-size: 40px;
+                 opacity: 0.27; 
+                color: #f16624;
+                position: absolute;
+                bottom: -50px;
+                right: 0;
+                @media (max-width: 1200px){
+                    bottom: -18px;
+                   font-size: 22px;
+                }
+                @media (max-width: 767px){
+                    bottom: -14px;
+                    font-size: 10px;
+                }
+            }
+            @media (max-width: 1200px){
+               font-size: 18px;
+            }
+            @media (max-width: 767px){
+                font-size: 12px;
+            }
+        }
+    }
+
+  .animate-img {
+    width: 25%;
+    height: 25%;
+    border-radius: 50%;
+    overflow: hidden;
+
+    .animate-img__in {
+      position: absolute;
+      top: 0px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      border-radius: 50%;
+      background-repeat: no-repeat;
+      z-index: 3;
+      transform: rotate3d(0, 0, 0, 0deg) scale(.85);
+      transition: .55s ease-in-out;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      background-size: cover;
+    }
+  }
+
+  .animate-more {
+    opacity: 0;
+    visibility: hidden;
+    transition: all .5s .4s;
+    min-width: 131px;
+    overflow: visible;
+    text-align: center;
+    z-index: 30;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    padding: 0px;
+    height: 100px;
+    transform: scale(.8);
+    @media (max-width: 375px){
+        left: -20px;
+    }
+  }
+
+  .animate.active {
+
+    .animate-more {
+      opacity: 1;
+      visibility: visible;
+      transform: scale(1);
+    }
+    .animate-img  .animate-img__in {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+}
+
+.team{
+    .team-image{
+        padding: 0 30px;
+        .rectangle-left{
+            background: $orange-3;
+            width: 100px;
+            height: 170px;
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            z-index: -1;
+            opacity: 0.56;
+            border-radius: 30px 0 0 30px;
+            @media(max-width: 991px){
+                top: 15px;
+            }
+        }
+        .rectangle-right{
+            background: $orange-3;
+            width: 150px;
+            height: 95px;
+            position: absolute;
+            top: 30px;
+            right: 40px;
+            z-index: -1;
+            opacity: 0.56;
+            border-radius: 0 40px 40px 0;
+            @media(max-width: 991px){
+                top: 15px;
+            }
+        }
+        @media (max-width: 991px){
+            margin: auto;
+        }
+    }
+}
