--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -23,7 +23,7 @@
 
 
 
-body:not(.home , .page-template-front-page-home , .page-template-front-page-version1-php){
+body:not(.page-template-front-page-home){
     header{
         background: #fff;
         padding: 25px 65px;
