--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1860,3 +1860,42 @@ input[type="text"] , textarea{
         }
     }
 }
+
+.page{
+    &-title{
+        max-width: 1096px;
+        margin-left: auto;
+        margin-right: auto;
+        @media (max-width: 767px) {
+            margin-bottom: 15px;
+        }
+    }
+    &-content{     
+        text-align: center;  
+        margin-bottom: 120px; 
+        max-width: 1096px;
+        margin-left: auto;
+        margin-right: auto;
+        h2{
+            margin-bottom: 50px;
+            font-size: 28px;
+            font-weight: 400;
+            color: #505050;
+            @media (max-width: 425px) {
+                font-size: 24px;
+                margin-bottom: 40px;
+            }
+        }
+        p{
+            margin-bottom: 30px;
+            font-size: 18px;
+            font-weight: normal;
+            text-align: center;
+            color: #a2a2a2;
+        }
+        @media (max-width: 768px) {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+    }
+}
