--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -9577,7 +9577,7 @@ input[type="text"], textarea {
 
 .circle--rotate {
   border-radius: 50%;
-  border: 1px #000000 solid;
+  border: 1px #d8d8d8 solid;
   width: 43%;
   height: 43%;
   margin: 0 auto 0;
