team circle changes

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1441,7 +1441,7 @@ input[type="text"] , textarea{
 
     img {
         margin: auto;
-        transform: rotate(235deg);
+        // transform: rotate(235deg);
         width: 100px;
         height: 100px;
         transition: all 0.3s ease;
@@ -1458,37 +1458,42 @@ input[type="text"] , textarea{
     &.active{
         & + .block{
             img{
-                transform: rotate(318deg);
+                transform: rotate(-40deg);
             }
         }
         &+.block+.block{
             img{
-                transform: rotate(288deg);
+                transform: rotate(-80deg);
+            }
+        }
+        &+.block+.block+.block{
+            img{
+                transform: rotate(-120deg);
             }
         }
         &+.block+.block+.block+.block{
             img{
-                transform: rotate(200deg);
+                transform: rotate(-160deg);
             }
         }
         &+.block+.block+.block+.block+.block{
             img{
-                transform: rotate(165deg);
+                transform: rotate(-200deg);
             }
         }
         &+.block+.block+.block+.block+.block+.block{
             img{
-                transform: rotate(120deg);
+                transform: rotate(-240deg);
             }
         }
         &+.block+.block+.block+.block+.block+.block+.block{
             img{
-                transform: rotate(80deg);
+                transform: rotate(-280deg);
             }
         }
         &+.block+.block+.block+.block+.block+.block+.block+.block{
             img{
-                transform: rotate(40deg);
+                transform: rotate(-320deg);
             }
         }
     }
