--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -688,6 +688,7 @@ hr.line-separator{
 }
 
 .contact-us{
+    min-height: 58vh;
     .nav-tabs{
         border-bottom: 0;
         justify-content: center;
@@ -698,13 +699,23 @@ hr.line-separator{
             justify-content: center;
             flex-direction: column;
             a{
-                border: solid 6px #7b7b7b;
+                border: solid 4px #7b7b7b;
                 border-radius: 100%;
                 height: 130px;
                 width: 130px;
-                padding: 28px 0;
+                padding: 25px 0;
                 text-align: center;
                 color: $orange-3;
+                margin: auto;
+                img{
+                    max-height: 100%;
+                    &.not-active{
+                        display: inline-block;
+                    }
+                    &.active{
+                        display: none;
+                    }
+                }
                 &.active{
                     border: solid 6px $orange-3;
                     background-color: $orange-3;
@@ -713,6 +724,15 @@ hr.line-separator{
                         font-size: 3.5em;
                         @media (max-width: 475px){
                             font-size: 3em;
+                        }
+                    }
+                    img{
+                        display: none;
+                        &.active{
+                            display: inline-block;
+                        }
+                        &.not-active{
+                            display: none;
                         }
                     }
                 }
@@ -728,6 +748,9 @@ hr.line-separator{
                     width: 80px;
                     padding: 10px 0;
                 }
+            }
+            &.active{
+                
             }
         }
     }
