--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1243,6 +1243,9 @@ input[type="text"] , textarea{
     border: 0;
     border-radius: 0;
     position: relative;
+    min-width: 170px;
+    text-align: left;
+    padding-left: 12px;
     &:hover{
         background-color: $orange-3;
         color: white;
