form button fix

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -819,6 +819,8 @@ hr.line-separator{
                 border: 0;
                 border-radius: 0;
                 position: relative;
+                text-align: left;
+                padding-left: 12px;
                 &:after{
                     content: "\f105";
                     color: white;
