--- a/wp-content/themes/toppeq/scss/theme/_helpers.scss
+++ b/wp-content/themes/toppeq/scss/theme/_helpers.scss
@@ -82,3 +82,12 @@
 .min-353{
     min-height: 353px;
 }
+
+.text-black{
+    color: #000;
+    text-decoration: none;
+    &:hover{
+        color: #000;
+        text-decoration: none; 
+    }
+}
