--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -805,7 +805,7 @@ hr.line-separator{
             background-color: white;
             padding: 1.5rem;
             margin: 0 15px;
-            input[type="text"] , textarea{
+            input[type="text"] , input[type="email"], input[type="number"], textarea{
                 border-bottom: solid 1px $gray-500 !important;
                 box-shadow: none;
                 border: 0;
@@ -2130,5 +2130,13 @@ input[type="text"] , textarea{
                 margin: 0;
             }
         }
+    }
+}
+
+.form-title{
+    padding: 15px 39px 0 39px;
+    h5{
+        font-weight: 700;
+        margin-bottom: 0;
     }
 }
