Blogs image fix

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2164,6 +2164,7 @@ input[type="text"] , textarea{
                 bottom: 0;
                 height: 100%;
                 object-fit: contain;
+                object-fit: cover;
                 width: 100%;
             }
         }
