--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -45,12 +45,15 @@ body:not(.page-template-front-page-home){
             padding-top: 25px;
             padding-bottom: 25px;
         }
+        @media (max-width: 575px) {
+            padding: 25px 0;
+        }
     }
 }
 .hamburger-menu{
     > div {
         background-color: #000;
-        display: none;
+        //display: none;
     }
 }
 .page-template-template-press-php , .single{
